--- a/etch.css
+++ b/etch.css
@@ -1,9 +1,13 @@
 .page {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sketch-box {
+    border: 1px black solid;
     height: 500px;
     width: 500px;
     display: grid;
