--- a/etch.css
+++ b/etch.css
@@ -4,6 +4,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.new-game-btn {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    margin-bottom: 50px;
 }
 
 .sketch-box {
